option optimize_for = LITE_RUNTIME;

message featurecollection {
    repeated feature features = 1;
}

message feature {
    repeated geometry geometries = 1;
    repeated property properties = 2;
    optional id id = 3;
}

message geometry {

    enum Type {
        POINT = 0;
        MULTIPOINT = 1;
        LINESTRING = 2;
        MULTILINESTRING = 3;
        POLYGON = 4;
        MULTIPOLYGON = 5;
    }

    required Type type = 1;
    repeated coord_array coord_array = 3;
    repeated multi_array multi_array = 4;
}

message property {
    required string key = 1;
    optional value value = 2;
}

message id {
    required string value = 1;
}

message value {
    enum Type {
        bool_value = 0;
        string_value = 1;
        float_value = 2;
        double_value = 3;
        int_value = 4;
        uint_value = 5;
        sint_value = 6;
    }

    optional string string_value = 1;
    optional float float_value = 2;
    optional double double_value = 3;
    optional int64 int_value = 4;
    optional uint64 uint_value = 5;
    optional sint64 sint_value = 6;
    optional bool bool_value = 7;
    optional Type type = 8 [default=string_value];
}

message coord_array {
    repeated int64 coords = 1 [packed=true];
    optional bool is_xyz = 2;
}

message multi_array {
    repeated coord_array arrays = 1;
}
